* The Toggle icon wasn't properly aligned (GenericMenu template, index.css, compat.css) [Bug 4030]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@9631 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/css/compat.css
+++ b/Themes/default/css/compat.css
@@ -449,6 +449,11 @@ h3.catbg img.icon, div.titlebg img.icon, h3.catbg img
 	float: left;
 	margin: 5px 8px 0 0;
 }
+h4.catbg a.toggle img
+{
+	vertical-align: middle;
+	margin: -2px 5px 0 5px;
+}
 
 /* Styles for the board index.
 ------------------------------------------------- */
