--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -789,6 +789,11 @@ h3.catbg img.icon, h4.titlebg img.icon
 	vertical-align: middle;
 	margin: -2px 5px 0 0;
 }
+h4.catbg a.toggle img
+{
+	vertical-align: middle;
+	margin: -2px 5px 0 5px;
+}
 h4.catbg span.left, h4.catbg2 span.left, h3.catbg span.left, h3.catbg2 span.left, .table_list tbody.header td span.left
 {
 	float: left;
